--- a/ArrangeApp/app/src/main/res/values/colors.xml
+++ b/ArrangeApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="whorlview_material_red">#F44336</color>
+    <color name="whorlview_material_green">#4CAF50</color>
+    <color name="whorlview_material_blue">#5677fc</color>
 </resources>
