体育的控件实现，提交

--- a/ArrangeApp/app/src/main/res/values/styles.xml
+++ b/ArrangeApp/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+    <declare-styleable name="HalfProgressBar">
+        <attr name="roundColor1" format="color"/>
+        <attr name="roundProgressColor1" format="color"/>
+        <attr name="circularDotColor1" format="color"/>
+    </declare-styleable>
+
 </resources>
