--- a/ArrangeApp/app/src/main/res/values/colors.xml
+++ b/ArrangeApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="whorlview_material_red">#F44336</color>
     <color name="whorlview_material_green">#4CAF50</color>
     <color name="whorlview_material_blue">#5677fc</color>
+
+    <color name="pbt_background">#dd0000</color>
+
+    <color name="blue">#3F51B5</color>
 </resources>
