--- a/ArrangeApp/app/src/main/res/values/dimens.xml
+++ b/ArrangeApp/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="pbt_stroke_width">4dp</dimen>
+    <dimen name="pbt_cornor_radius">48dp</dimen>
 </resources>
