--- a/ArrangeApp/app/src/main/res/values/dimens.xml
+++ b/ArrangeApp/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
 
     <dimen name="pbt_stroke_width">4dp</dimen>
     <dimen name="pbt_cornor_radius">48dp</dimen>
+
+    <dimen name="title_bar_height">48dp</dimen>
 </resources>
